client/src/App.scss
#content {
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.leaflet-pane.leaflet-overlay-pane, .leaflet-pane .leaflet-image-layer, .leaflet-pane svg {
  mix-blend-mode: multiply;
}

.detail-nav {
  position: fixed;
  top: 49px;
  width: 101vw !important;
  height: 30px;

  @media (max-width: 768px) {
    top: unset;
    bottom: 59px;
  }
}

.bp5-navbar {
  .bp5-navbar-group > * {
    margin-bottom: 0;
  }

  @media (max-width: 768px) {
    .bp5-navbar-group > * {
      margin-bottom: 7px !important;
    }

    position: fixed;
    bottom: 0;
    padding-bottom: 59px !important;
    background-color: #252a31;
  }
}

#wrapper {
  display: flex;
  justify-content: center; /* Horizontally center */
  height: calc(100vh - 50px);
  min-height: calc(100vh - 50px);
  max-height: calc(100vh - 50px);
  overflow-x: hidden;
  overflow-y: auto;

  @media (max-width: 768px) {
    padding-right: 3px;
    padding-left: 0;
    margin-top: 0;
    height: calc(100vh - 60px);
    min-height: calc(100vh - 60px);
    max-height: calc(100vh - 60px);
  }

  &.more-spacing {
    height: calc(100vh - 80px);
    min-height: calc(100vh - 80px);
    max-height: calc(100vh - 80px);

    @media (max-width: 768px) {
      height: calc(100vh - 90px);
      min-height: calc(100vh - 90px);
      max-height: calc(100vh - 90px);
    }
  }
}

h1, h2, h3, h4, h5, h6 {
  font-family: Blender Pro, -apple-system, sans-serif;
}

h3 {
  font-size: 19px;
}

.muted-bg {
  background-color: #2F343C;
  width: calc(100% - 2px);
  margin-left: 1px;
  padding: 10px 0;
  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
}

span.muted {
  color: #8C8C8C;
}

.bg-blue-low {
  background-color: rgba(24, 74, 144, 0.2);
}

.bg-blue-medium {
  background-color: rgba(24, 74, 144, 0.5);
}

.bg-blue-high {
  background-color: rgba(24, 74, 144, 0.7);
}

.bg-blue-extreme {
  background-color: rgba(24, 74, 144, 1);
}

.bg-yellow-low {
  background-color: rgba(240, 183, 38, 0.2);
}

.bg-yellow-medium {
  background-color: rgba(240, 183, 38, 0.4);
}

.bg-yellow-high {
  background-color: rgba(240, 183, 38, 0.5);
}

.bg-yellow-extreme {
  background-color: rgba(240, 183, 38, 0.6);
}

.bg-red-low {
  background-color: rgba(172, 47, 51, 0.2);
}

.bg-red-medium {
  background-color: rgba(172, 47, 51, 0.5);
}

.bg-red-high {
  background-color: rgba(172, 47, 51, 0.7);
}

.bg-red-extreme {
  background-color: rgba(172, 47, 51, 0.9);
}

.bg-green-low {
  background-color: rgba(35, 133, 81, 0.2);
}

.bg-green-medium {
  background-color: rgba(35, 133, 81, 0.5);
}

.bg-green-high {
  background-color: rgba(35, 133, 81, 0.7);
}

.bg-green-extreme {
  background-color: rgba(35, 133, 81, 0.9);
}

// FIXES
.bp5-callout h5 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

